v1.2.9 (2018.07.xx)
  - Correct format of SessionID passed to HDHomeRun RECORD engine for Live TV streams
  - (Windows) Build HTTP-only cURL from source instead of using prebuilt static library
  - (Linux/Android/OSX) Switch to HTTP-only prebuilt libcurl static library
  - Add User-Agent string to all HTTP requests in order to identify the PVR client to the backend services

v1.2.8 (2017.12.29)
  - Update zlib library to version 1.2.11
  - Update cURL library to version 7.57.0
  - Add "Prepend season/episode number to episode name in EPG" setting
  - Add "Enable verbose data transfer logs" advanced setting
  - Add "Disable reporting of real-time MPEG-TS streams" advanced setting
  - Fix logging of HTTP request errors that occurred during multi-step database queries
  - Fix bug causing "Trigger recording discovery immediately after playback" to be applied to "Use network broadcast for device discovery" until restart
  - Fix bug causing stale Timers to appear in Kodi if a series with a valid recording rule has no episode information on the backend
  - (OSX) Initial release for Apple OSX x86_64

v1.2.7 (2017.12.05)
  - Improve handling of in-progress Recorded TV streams that have switched from a live to a recorded state
  - Add support for processing Recorded TV Edit Decision Lists (EDL)
  - Add "Trigger recording discovery immediately after playback" setting

v1.2.6 (2017.11.30)
  - Fix forward seeking problems with Live TV streams
  - Fix playback problems with in-progress Recorded TV streams

v1.2.5 (2017.11.28)
  - Add "Use backend genre string(s) in Electronic Program Guide (EPG)" setting
  - Add "Show DRM protected channels in channel lineups" setting
  - Add synchronization of recording resume position with the storage engine 

v1.2.4 (2017.11.24)
  - Fix bug preventing background discovery task scheduler from stopping properly
  - Remove forced MPEG-TS packet boundary alignment during stream seek and read operations