@@ -2660,7 +2660,7 @@ void http_request(sqlite3_context* context, int argc, sqlite3_value** argv)
 	// useragent
 	//
 	// Static string to use as the User-Agent for this HTTP request
-	static std::string useragent = "Kodi-PVR/" + std::string(XBMC_PVR_API_VERSION) + " " + VERSION_PRODUCTNAME_ANSI + "/" + VERSION_VERSION3_ANSI;
+	static std::string useragent = "Kodi-PVR/" + std::string(ADDON_INSTANCE_VERSION_PVR) + " " + VERSION_PRODUCTNAME_ANSI + "/" + VERSION_VERSION3_ANSI;
 
 	if((argc < 1) || (argc > 2) || (argv[0] == nullptr)) return sqlite3_result_error(context, "invalid argument", -1);
 
