@@ -313,6 +313,11 @@ static std::shared_ptr<connectionpool> g_connpool;
 // DVR stream buffer instance
 static std::unique_ptr<dvrstream> g_dvrstream;
 
+// g_epgenabled
+//
+// Flag indicating if EPG access is enabled for the process
+static bool g_epgenabled = true;
+
 // g_epgmaxtime
 //
 // Maximum number of days to report for EPG and series timers
@@ -594,6 +599,11 @@ static void discover_devices_task(scalar_condition<bool> const& cancel)
 			g_scheduler.remove(discover_recordings_task);
 			discover_recordings_task(cancel);
 		}
+
+		// Re-enable access to the EPG if it had been disabled due to multiple failure(s) accessing
+		// a channel EPG.  The idea here is to prevent unauthorized clients from slamming the backend
+		// services for no reason -- see the GetEPGForChannel() function.
+		g_epgenabled = true;
 	}
 
 	catch(std::exception& ex) { handle_stdexception(__func__, ex); }
@@ -1191,6 +1201,115 @@ static int ringbuffersize_enum_to_bytes(int nvalue)
 	};
 
 	return (4 MiB);					// 4 Megabytes = default
+}
+
+// try_getepgforchannel
+//
+// Request the EPG for a channel from the backend
+static bool try_getepgforchannel(ADDON_HANDLE handle, PVR_CHANNEL const& channel, time_t start, time_t end)
+{
+	assert(g_pvr);
+	assert(handle != nullptr);
+
+	// Retrieve the channel identifier from the PVR_CHANNEL structure
+	union channelid channelid;
+	channelid.value = channel.iUniqueId;
+
+	//
+	// NOTE: This does not cache all of the enumerated guide data locally before
+	// transferring it over to Kodi, it's done realtime to reduce the heap footprint
+	// and allow Kodi to process the entries as they are generated
+	//
+
+	try {
+
+		// Create a copy of the current addon settings structure
+		struct addon_settings settings = copy_settings();
+
+		// Pull a database connection out from the connection pool
+		connectionpool::handle dbhandle(g_connpool);
+
+		// Log the request if verbose_disovery_logging has been enabled
+		if(settings.verbose_transfer_logging) {
+
+			char strstart[24] = {'\0'};				// Buffer for converted time_t
+			char strend[24] = {'\0'};				// Buffer for converted time_t
+
+			// Convert both time_t values into "YYYY-MM-DDTHH:MM:SSZ"
+			strftime(strstart, std::extent<decltype(strstart)>::value, "%FT%TZ", gmtime(&start));
+			strftime(strend, std::extent<decltype(strend)>::value, "%FT%TZ", gmtime(&end));
+
+			log_notice(__func__, ": Guide data requested for channel ", channel.strChannelName, ": start=", strstart, " end=", strend);
+		}
+
+		// Enumerate all of the guide entries in the database for this channel and time frame
+		enumerate_guideentries(dbhandle, channelid, start, end, settings.prepend_episode_numbers_in_epg, [&](struct guideentry const& item) -> void {
+
+			EPG_TAG	epgtag;										// EPG_TAG to be transferred to Kodi
+			memset(&epgtag, 0, sizeof(EPG_TAG));				// Initialize the structure
+
+			// iUniqueBroadcastId (required)
+			epgtag.iUniqueBroadcastId = static_cast<unsigned int>(item.starttime);
+
+			// iUniqueChannelId (required)
+			epgtag.iUniqueChannelId = item.channelid;
+
+			// strTitle (required)
+			if(item.title == nullptr) return;
+			epgtag.strTitle = item.title;
+
+			// startTime (required)
+			epgtag.startTime = item.starttime;
+
+			// endTime (required)
+			epgtag.endTime = item.endtime;
+
+			// strPlot
+			if(item.synopsis != nullptr) epgtag.strPlot = item.synopsis;
+
+			// iYear
+			epgtag.iYear = item.year;
+
+			// strIconPath
+			if(item.iconurl != nullptr) epgtag.strIconPath = item.iconurl;
+
+			// iGenreType
+			epgtag.iGenreType = (settings.use_backend_genre_strings) ? EPG_GENRE_USE_STRING : item.genretype;
+
+			// strGenreDescription
+			if(settings.use_backend_genre_strings) epgtag.strGenreDescription = item.genres;
+
+			// firstAired
+			epgtag.firstAired = item.originalairdate;
+
+			// iSeriesNumber
+			epgtag.iSeriesNumber = item.seriesnumber;
+
+			// iEpisodeNumber
+			epgtag.iEpisodeNumber = item.episodenumber;
+
+			// iEpisodePartNumber
+			epgtag.iEpisodePartNumber = -1;
+
+			// strEpisodeName
+			if(item.episodename != nullptr) epgtag.strEpisodeName = item.episodename;
+
+			// iFlags
+			epgtag.iFlags = EPG_TAG_FLAG_IS_SERIES;
+
+			// strSeriesLink
+			epgtag.strSeriesLink = item.seriesid;
+
+			// Transfer the EPG_TAG structure over over to Kodi and log if enabled
+			g_pvr->TransferEpgEntry(handle, &epgtag);
+			if(settings.verbose_transfer_logging) log_transfer_epgtag(epgtag);
+		});
+	}
+	
+	catch(std::exception& ex) { return handle_stdexception(__func__, ex, false); }
+	catch(...) { return handle_generalexception(__func__, false); }
+
+	return true;
 }
 
 //---------------------------------------------------------------------------
@@ -2206,7 +2325,12 @@ PVR_ERROR CallMenuHook(PVR_MENUHOOK const& menuhook, PVR_MENUHOOK_DATA const& it
 //---------------------------------------------------------------------------
 // GetEPGForChannel
 //
-// Request the EPG for a channel from the backend
+// Request the EPG for a channel from the backend.  If the operation fails, this
+// will re-execute a device discovery inline (and therefore possibly a lineup and
+// recording discovery) in order to refresh the device authorization codes.  If the
+// operation fails a second time, the function will be disabled until the next
+// device discovery -- this was put in place to limit the number of times that an 
+// unauthorized client can request EPG data from the backend services.
 //
 // Arguments:
 //
@@ -2217,109 +2341,31 @@ PVR_ERROR CallMenuHook(PVR_MENUHOOK const& menuhook, PVR_MENUHOOK_DATA const& it
 
 PVR_ERROR GetEPGForChannel(ADDON_HANDLE handle, PVR_CHANNEL const& channel, time_t start, time_t end)
 {
-	assert(g_pvr);
+	bool		cancel = false;				// Unused cancellation flag for discover_devices_task
 
 	if(handle == nullptr) return PVR_ERROR::PVR_ERROR_INVALID_PARAMETERS;
 
-	// Retrieve the channel identifier from the PVR_CHANNEL structure
-	union channelid channelid;
-	channelid.value = channel.iUniqueId;
+	// Check if the EPG function has been disabled due to failure(s)
+	if(!g_epgenabled) return PVR_ERROR::PVR_ERROR_FAILED;
 
-	//
-	// NOTE: This does not cache all of the enumerated guide data locally before
-	// transferring it over to Kodi, it's done realtime to reduce the heap footprint
-	// and allow Kodi to process the entries as they are generated
-	//
+	// Try to get the EPG data for the channel, if successful the operation is complete
+	bool result = try_getepgforchannel(handle, channel, start, end);
+	if(result == true) return PVR_ERROR::PVR_ERROR_NO_ERROR;
 
-	try {
+	// If the operation failed, re-execute a device discovery in case the deviceauth code(s) are stale
+	log_notice(__func__, ": failed to retrieve EPG data for channel -- execute device discovery now");
+	g_scheduler.remove(discover_devices_task);
+	discover_devices_task(cancel);
 
-		// Create a copy of the current addon settings structure
-		struct addon_settings settings = copy_settings();
+	// Try the operation again after the device discovery task has completed
+	result = try_getepgforchannel(handle, channel, start, end);
+	if(result == true) return PVR_ERROR::PVR_ERROR_NO_ERROR;
 
-		// Pull a database connection out from the connection pool
-		connectionpool::handle dbhandle(g_connpool);
-
-		// Log the request if verbose_disovery_logging has been enabled
-		if(settings.verbose_transfer_logging) {
-
-			char strstart[24] = {'\0'};				// Buffer for converted time_t
-			char strend[24] = {'\0'};				// Buffer for converted time_t
-
-			// Convert both time_t values into "YYYY-MM-DDTHH:MM:SSZ"
-			strftime(strstart, std::extent<decltype(strstart)>::value, "%FT%TZ", gmtime(&start));
-			strftime(strend, std::extent<decltype(strend)>::value, "%FT%TZ", gmtime(&end));
-
-			log_notice(__func__, ": Guide data requested for channel ", channel.strChannelName, ": start=", strstart, " end=", strend);
-		}
-
-		// Enumerate all of the guide entries in the database for this channel and time frame
-		enumerate_guideentries(dbhandle, channelid, start, end, settings.prepend_episode_numbers_in_epg, [&](struct guideentry const& item) -> void {
-
-			EPG_TAG	epgtag;										// EPG_TAG to be transferred to Kodi
-			memset(&epgtag, 0, sizeof(EPG_TAG));				// Initialize the structure
-
-			// iUniqueBroadcastId (required)
-			epgtag.iUniqueBroadcastId = static_cast<unsigned int>(item.starttime);
-
-			// iUniqueChannelId (required)
-			epgtag.iUniqueChannelId = item.channelid;
-
-			// strTitle (required)
-			if(item.title == nullptr) return;
-			epgtag.strTitle = item.title;
-
-			// startTime (required)
-			epgtag.startTime = item.starttime;
-
-			// endTime (required)
-			epgtag.endTime = item.endtime;
-
-			// strPlot
-			if(item.synopsis != nullptr) epgtag.strPlot = item.synopsis;
-
-			// iYear
-			epgtag.iYear = item.year;
-
-			// strIconPath
-			if(item.iconurl != nullptr) epgtag.strIconPath = item.iconurl;
-
-			// iGenreType
-			epgtag.iGenreType = (settings.use_backend_genre_strings) ? EPG_GENRE_USE_STRING : item.genretype;
-
-			// strGenreDescription
-			if(settings.use_backend_genre_strings) epgtag.strGenreDescription = item.genres;
-
-			// firstAired
-			epgtag.firstAired = item.originalairdate;
-
-			// iSeriesNumber
-			epgtag.iSeriesNumber = item.seriesnumber;
-
-			// iEpisodeNumber
-			epgtag.iEpisodeNumber = item.episodenumber;
-
-			// iEpisodePartNumber
-			epgtag.iEpisodePartNumber = -1;
-
-			// strEpisodeName
-			if(item.episodename != nullptr) epgtag.strEpisodeName = item.episodename;
-
-			// iFlags
-			epgtag.iFlags = EPG_TAG_FLAG_IS_SERIES;
-
-			// strSeriesLink
-			epgtag.strSeriesLink = item.seriesid;
-
-			// Transfer the EPG_TAG structure over to Kodi
-			g_pvr->TransferEpgEntry(handle, &epgtag);
-			if(settings.verbose_transfer_logging) log_transfer_epgtag(epgtag);
-		});
-	}
-	
-	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
-	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
-
-	return PVR_ERROR::PVR_ERROR_NO_ERROR;
+	// If the operation failed a second time, temporarily disable the EPG functionality.  This flag
+	// will be cleared after the next successful device discovery completes.
+	log_error(__func__, ": Multiple failures were encountered accessing EPG data; EPG functionality is temporarily disabled");
+	g_epgenabled = false;
+	return PVR_ERROR::PVR_ERROR_FAILED;
 }
 
 //---------------------------------------------------------------------------
